--- a/package.json
+++ b/package.json
@@ -2,16 +2,53 @@
   "name": "car-loan-app",
   "version": "0.1.0",
   "private": true,
+  "main": "app/index.js",
   "dependencies": {
+    "electron-is-dev": "^1.1.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start:electron": "wait-on http://localhost:3000 && electron app",
+    "start:react": "cross-env BROWSER=none react-app-rewired start",
+    "start": "concurrently \"npm run start:react\" \"npm run start:electron\"",
+    "build:react": "react-app-rewired build",
+    "copy:electron": "cp -r ./app/. ./build",
+    "build:copy": "npm run build:react && npm run copy:electron",
+    "pack": "electron-builder",
+    "build": "npm run build:copy && npm run pack",
+    "build:win": "npm run build:react-copy && npm run pack:win",
+    "pack:win": "electron-builder --win",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
+  },
+  "build": {
+    "productName": "Electron-React-Test",
+    "extends": null,
+    "files": [
+      "build/**/*"
+    ],
+    "mac": {
+      "icon": "icons/icon.icns"
+    },
+    "win": {
+      "target": "nsis",
+      "icon": "icons/icon.png"
+    },
+    "linux": {
+      "target": [
+        "AppImage",
+        "deb"
+      ],
+      "icon": "icons/icon.png"
+    },
+    "extraMetadata": {
+      "main": "build/index.js"
+    },
+    "directories": {
+      "buildResources": "assets"
+    }
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -21,5 +58,18 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "concurrently": "^4.1.0",
+    "cross-env": "^5.2.0",
+    "devtron": "^1.4.0",
+    "electron": "^4.1.4",
+    "electron-builder": "^20.39.0",
+    "electron-debug": "^2.2.0",
+    "electron-devtools-installer": "^2.2.4",
+    "fsevents": "^1.2.7",
+    "react-app-rewired": "^2.1.1",
+    "typescript": "^3.4.3",
+    "wait-on": "^3.2.0"
+  }
 }
